# AI-for-error-mitigation-and-error-correction

./: AI_for_QEC.ipynb  Classical-Quantum-Reservoir-Computing.ipynb  Intro_AI+QC.ipynb  ML_Quantum_Error_Mitigation.ipynb  README.md
examples/: ML_QEM_experiment.ipynb
ml-denoising/: README.md  pyproject.toml
ml-denoising/examples/: ML_QEM_experiment.py  introductory_example.ipynb
ml-denoising/src /ml_denoising/: __init__.py  circuit.py  data_generation.py  model.py  noise_modeling.py  train.py
